--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://toobstar.github.io/blog/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'TV Blog'
 theme = 'etch'
