--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://toobstar.github.io/blog/'
+baseURL = 'https://toobstar.github.io/'
 languageCode = 'en-us'
 title = 'TV Blog'
 theme = 'etch'
