--- a/hugo.toml
+++ b/hugo.toml
@@ -1,15 +1,13 @@
 baseURL = 'https://toobstar.github.io/'
 languageCode = 'en-us'
-title = 'Cloud IT & Security in Practice'
+title = 'Cloud IT & Security Practice'
 theme = 'minimo'
-
-
 
 # for smart copyright line, leave this blank and check [params.copyright]
 copyright = ""
 
 disqusShortname = ""
-googleAnalytics = ""
+googleAnalytics = "G-V15ZTFQZ84"
 
 Paginate = 5
 preserveTaxonomyNames = true
@@ -25,7 +23,7 @@ enableEmoji = true
 defaultContentLanguage = "en"
 
 [params.info]
-description = "Enable Growth through Impact and Efficiency"
+description = "Enabling Growth with Impact and Efficiency"
 title404 = "Not found"
 
 [params.assets]
@@ -42,16 +40,16 @@ suffix = ""
 
 [params.settings]
 # date & time format: https://golang.org/pkg/time/
-dateFormat = "2006, Jan 02"
-listDateFormat = "2006, Jan 02"
-archiveDateFormat = "Jan 02"
+dateFormat = "Jan 2006"
+listDateFormat = "Jan 2006"
+archiveDateFormat = "Jan 2006"
 hideEntryNavigation = ["page"] # boolean / array of sections
 hideEntryMeta = ["page"] # boolean / array of sections
 showReadingTime = true
 showLastmod = true
 taxonomyCloudShuffle = true
 accentColor = "#00b7ff"
-hideMainMenu = true
+hideMainMenu = false
 
 [params.sidebar]
 enable = true
