added github link

--- a/hugo.toml
+++ b/hugo.toml
@@ -78,7 +78,7 @@ titleSeparator = "•"
 codepen = ""
 email = ""
 facebook = ""
-github = ""
+github = "toobstar"
 gitlab = ""
 instagram = ""
 linkedin = "toby-vidler-36973425"
