--- a/themes/minimo/data/config/default/widgets.toml
+++ b/themes/minimo/data/config/default/widgets.toml
@@ -20,7 +20,7 @@ title = ""
 mirror = ""
 
 [social_menu]
-title = ""
+title = "Toby Vidler"
 platforms = ["github","facebook","twitter","instagram","email","codepen","gitlab","linkedin","telegram","google_scholar","youtube"]
 
 [taxonomy_cloud]
